# snp

./: .gitlab-ci.yml  Makefile  README.md  References.md  dependencies.repos  environment.md  my_dependencies_exact.repos  my_dependencies_exact_with_tags.repos  package.xml
.github/workflows/: docker.yml  ubuntu.yml
calibration/: intrinsics.yaml
config/: app.rviz  calibration.yaml  scan_traj.yaml  workcell.srdf
docker/: Dockerfile  README.md  docker-compose.yml  launch_snp_automate_2023.sh
launch/: start.launch.xml  test.launch.xml
meshes/: sensor_bracket.ply  sponge.ply
snp_automate_2023/: CMakeLists.txt
snp_automate_2023/calibration/: cal_data_collection.launch.xml  calibrate.launch.xml  charuco_target_7x5.yaml
snp_automate_2023/config/: app.rviz  calibration.yaml  scan_traj.yaml
snp_automate_2023/launch/: start.launch.xml  test.launch.xml
snp_automate_2023/meshes/: ati_bracket.ply  ati_standoff.ply  ati_tool.ply  hc10_standoff.ply
snp_automate_2023/meshes/collision/: ati_hose.ply  ati_spindle.ply
snp_automate_2023/motoros2/: motoros2_config.yaml
snp_automate_2023/urdf/: ros2_control.xacro  workcell.xacro
snp_automate_application/: CMakeLists.txt  package.xml
snp_automate_application/config/: snp_automate.btproj  snp_automate.xml
snp_automate_application/include/snp_automate_application/bt/: snp_automate_bt_ros_nodes.h
snp_automate_application/scripts/: motoros2_simulator.py
snp_automate_application/src/: snp_automate_widget.cpp
snp_automate_application/src/bt/: snp_automate_bt_ros_nodes.cpp
src/snp_automate_2023/: package.xml
src/snp_automate_2023/urdf/: workcell.xacro
src/snp_automate_application/: CMakeLists.txt  plugin_description.xml
src/snp_automate_application/include/snp_automate_application/: snp_automate_widget.h
src/snp_automate_application/src/: snp_automate_panel.cpp
urdf/: workcell.xacro
