<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>snp_automate_application</name>
  <version>0.0.0</version>
  <description>
    SNP Automate 2023 Application package
  </description>
  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>snp_application</depend>
  <depend>rviz_common</depend>
  <depend>pluginlib</depend>
  <depend>motoros2_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <!-- TODO: replace with more targeted set of linters
  <test_depend>ament_lint_common</test_depend>
  -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
